hard-gists/1935808/run.log
=== Docker Run Log for 1935808 ===
Started at: Mi 29. Okt 12:35:26 CET 2025

[2025-10-29 12:35:27] START: Running container for 1935808
[2025-10-29 12:35:27] SUCCESS: Container 175f6997d01fa720fb0cff61f1fac71f000a0f9178c50cbec1cbea737569ac91 started for 1935808
=== Container logs for 1935808 ===
  File "/snippet.py", line 35
    print "downgrading %s -> %s" % (fname, newname)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1935808 ===
[2025-10-29 12:35:29] INFO: Container 175f6997d01fa720fb0cff61f1fac71f000a0f9178c50cbec1cbea737569ac91 has stopped
